tests/cases/structs/errors/struct-generic-arity.ari
struct Pair[T] {
  left: T,
  right: T,
}

struct UsesPair {
  pair: Pair[i64, bool],
}

fn main() -> i64 {
  return 0;
}
